--- a/www/lib/angular/bower.json
+++ b/www/lib/angular/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular",
-  "version": "1.2.19-build.251+sha.24aee81",
+  "version": "1.2.19",
   "main": "./angular.js",
   "dependencies": {
   }
