--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.7",
     "ionicons": "driftyco/ionicons#1.5.0",
-    "angularfire": "*"
+    "angularfire": "*",
+    "firebase-util": "git@github.com:firebase/firebase-util.git"
   }
 }
