use ngAutocomplete; when adding to list of destinations, the scope is different (parent) of what i want

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ionicons": "driftyco/ionicons#1.5.0",
     "angularfire": "*",
     "firebase-util": "git@github.com:firebase/firebase-util.git",
-    "angular-google-maps": "*"
+    "angular-google-maps": "*",
+    "ngAutocomplete": "git@github.com:wpalahnuk/ngAutocomplete"
   }
 }
