--- a/www/lib/angularfire/bower.json
+++ b/www/lib/angularfire/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "angularfire",
   "description": "The officially supported AngularJS binding for Firebase",
-  "version": "0.8.0",
+  "version": "0.0.0",
   "authors": [
     "Firebase <support@firebase.com> (https://www.firebase.com/)"
   ],
-  "homepage": "https://github.com/firebase/angularFire",
+  "homepage": "https://github.com/firebase/angularfire",
   "repository": {
     "type": "git",
     "url": "https://github.com/firebase/angularfire.git"
@@ -27,12 +27,13 @@
     "firebase.json",
     "package.json",
     "Gruntfile.js",
-    "release.sh"
+    "changelog.txt"
   ],
   "dependencies": {
-    "angular": "1.2.21",
+    "angular": "1.2.x || 1.3.x",
     "firebase": "1.0.x",
-    "firebase-simple-login": "1.6.x"
+    "firebase-simple-login": "1.6.x",
+    "mockfirebase": "~0.2.9"
   },
   "devDependencies": {
     "lodash": "~2.4.1",
